# oh-my-game

./: CMakeLists.txt  Makefile  Readme.md  main.cpp
src/: mark.cpp  mark.h  stuff.cpp  stuff.h
